--- a/Horario/Horario.Domain/Horario.Domain.csproj
+++ b/Horario/Horario.Domain/Horario.Domain.csproj
@@ -81,8 +81,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\ICarreraRepository.cs" />
+    <Compile Include="Abstract\ICitaRepository.cs" />
     <Compile Include="Abstract\IDicaRepository.cs" />
     <Compile Include="Concrete\EFCarreraRepository.cs" />
+    <Compile Include="Concrete\EFCitaRepository.cs" />
     <Compile Include="Concrete\EFDicaRepository.cs" />
     <Compile Include="Entities\Carrera.cs">
       <DependentUpon>DBHorario.tt</DependentUpon>
