--- a/Horario/Horario.WebUI/Horario.WebUI.csproj
+++ b/Horario/Horario.WebUI/Horario.WebUI.csproj
@@ -179,6 +179,8 @@
     <Compile Include="Controllers\CarreraController.cs" />
     <Compile Include="Controllers\CitaController.cs" />
     <Compile Include="Controllers\DicaController.cs" />
+    <Compile Include="Controllers\HorarioController.cs" />
+    <Compile Include="Controllers\PersonaController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -190,6 +192,7 @@
     <Compile Include="Inicio.aspx.designer.cs">
       <DependentUpon>Inicio.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Models\CitaViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -204,6 +207,7 @@
     <Content Include="Views\Dica\List.cshtml" />
     <Content Include="Views\Shared\_CitasLayout.cshtml" />
     <Content Include="Views\Cita\Index.cshtml" />
+    <Content Include="Views\Cita\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -213,8 +217,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
     <Folder Include="Views\Carrera\" />
+    <Folder Include="Views\Horario\" />
+    <Folder Include="Views\Persona\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Horario.Domain\Horario.Domain.csproj">
