--- a/Horario/Horario.WebUI/Horario.WebUI.csproj
+++ b/Horario/Horario.WebUI/Horario.WebUI.csproj
@@ -85,6 +85,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="MvcSchedule, Version=1.0.0.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MvcSchedule.1.0.0.2\lib\net40\MvcSchedule.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
       <Private>True</Private>
@@ -204,15 +208,17 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Dica\List.cshtml" />
     <Content Include="Views\Shared\_CitasLayout.cshtml" />
     <Content Include="Views\Cita\Index.cshtml" />
     <Content Include="Views\Cita\Edit.cshtml" />
-    <Content Include="Views\Cita\List.cshtml" />
     <Content Include="Views\ViewCitas\Index.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\ViewCitas\Citas.cshtml" />
+    <Content Include="Views\Persona\Edit.cshtml" />
+    <Content Include="Views\ViewCitas\Edit.cshtml" />
+    <Content Include="Views\Cita\Calendario.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -224,9 +230,8 @@
     <Folder Include="App_Data\" />
     <Folder Include="Views\Carrera\" />
     <Folder Include="Views\Default\" />
+    <Folder Include="Views\Dica\" />
     <Folder Include="Views\Horario\" />
-    <Folder Include="Views\Persona\" />
-    <Folder Include="Views\ViewHorario\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Horario.Domain\Horario.Domain.csproj">
