--- a/Horario/Horario.WebUI/bin/Horario.WebUI.dll.config
+++ b/Horario/Horario.WebUI/bin/Horario.WebUI.dll.config
@@ -9,10 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+
+<!--    <add name="HorarioEntities" connectionString="metadata=res://*/Entities.HorarioModel.csdl|res://*/Entities.HorarioModel.ssdl|res://*/Entities.HorarioModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local)\SQLExpress;initial catalog=Horario;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+-->
     <add name="HorarioEntities" connectionString="metadata=res://*/Entities.HorarioModel.csdl|res://*/Entities.HorarioModel.ssdl|res://*/Entities.HorarioModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local)\SQLExpress;initial catalog=Horario;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-   <!-- <add name="HorarioEntities" connectionString="metadata=res://*/Entities.DBHorario.csdl|res://*/Entities.DBHorario.ssdl|res://*/Entities.DBHorario.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local)\SQLExpress;initial catalog=Horario;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  -->
   </connectionStrings>
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
